some color and additional text changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<article id="home" class="panel intro">
 				<header>
 					<h1>Rawand Dev</h1>
-					<p>Custom websites for your business</p>
+					<p>Websites tailored to your needs</p>
 				</header>
 
 			</article>
@@ -42,7 +42,7 @@
 					<h2>Work</h2>
 				</header>
 				<p>
-					Some examples of our websites
+					Some examples of what we can do for you
 				</p>
 				<section>
 					<div class="row">
@@ -90,7 +90,7 @@
 			<!-- Contact -->
 			<article id="contact" class="panel">
 				<header>
-					<h2>Contact Me</h2>
+					<h2>Where to find us</h2>
 				</header>
 				<form action="#" method="post">
 					<div>
