--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<!-- Contact -->
 			<article id="contact" class="panel">
 				<header>
-					<h2>Where to find us</h2>
+					<h2>How to find us</h2>
 				</header>
 				<form action="#" method="post">
 					<div>
